CHATS_SIT/force-app/main/default/objects/T_APPLN_JOB_SEARCH__c.object
<CustomObject>
    <description>PEAK application job search information</description>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <description>DTE_BEGIN_EFFV</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>DTE_BEGIN_EFFV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_APPLN_INDIV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN_APPLN_INDIV</label>
        <referenceTo>T_APPLN_INDIV__c</referenceTo>
        <relationshipLabel>Application Job Search</relationshipLabel>
        <relationshipName>Application_Job_Search</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_APPLN_JOB_SEARCH__c</fullName>
        <label>IDN_APPLN_JOB_SEARCH</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Job Search</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AJS-{0}</displayFormat>
        <label>Application Job Search ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Job Search</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>